Fix nav collapsing and footer fix.

--- a/source/css/main.css.sass
+++ b/source/css/main.css.sass
@@ -118,7 +118,7 @@ p
 .fixed
   position: fixed
   bottom: 0
-
+  overflow: hidden
 footer
   min-height: 200px
   position: relative
@@ -134,7 +134,7 @@ footer
     img
       float: right
       width: 30px
-      top: 0
+      margin-top: 12px
 
 .lemur
   max-width: 1000px
@@ -146,3 +146,8 @@ footer
 .gallery
   .col-md-4
     padding: 15px
+@media (max-width: 767px)
+  .footer
+    width: 100%
+  .navbar a.navbar-brand
+    padding: 7.5px
